# rag-practice

./: README.md  main.py  pyproject.toml  requirements.txt
data/md_files/: agentic_ai_tutorial.md  huggingface_tutorial.md  langgraph_tutorial.md  openai_api_tutorial.md
data/text_files/: langchain_learning.txt  llm_learning.txt
notebook/: data_ingestion_pipeline.ipynb  pdf_data_rag.ipynb
